# apis

./: BUILD.bazel  Makefile  README.md  WORKSPACE  category.proto  contact.proto  event.proto  go.mod  opponent.proto  person.proto  season.proto  shared.proto  team.proto
bazel/: deps.bzl  repositories.bzl
futtracker/v1/: BUILD.bazel  account.proto  futtracker_service.proto
futtracker/v1/account/: account.proto
futtracker/v1/service/: BUILD.bazel  empty.go  futtracker_service.proto
pwdmanager/v1/service/: BUILD.bazel  service.proto  service_grpc.pb.go
pwdmanager/v1/structs/: passwd.pb.go  passwd.proto
shareit/v1/service/: BUILD.bazel  shareit_service.pb.go  shareit_service.proto
