load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "futtracker_proto",
    srcs = ["account.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "futtracker_go_proto",
    importpath = "github.com/ckuenzl/apis/futtracker/v1",
    proto = ":futtracker_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":futtracker_go_proto"],
    importpath = "github.com/ckuenzl/apis/futtracker/v1",
    visibility = ["//visibility:public"],
)
