load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pwdmanager_service_v1_proto",
    srcs = ["service.proto"],
    visibility = ["//visibility:public"],
    deps = ["//pwdmanager/v1/structs:pwdmanager_structs_v1_proto"],
)

go_proto_library(
    name = "pwdmanager_service_v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/ckuenzl/apis/pwdmanager/v1/service",
    proto = ":pwdmanager_service_v1_proto",
    visibility = ["//visibility:public"],
    deps = ["//pwdmanager/v1/structs:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":pwdmanager_service_v1_go_proto"],
    importpath = "github.com/ckuenzl/apis/pwdmanager/v1/service",
    visibility = ["//visibility:public"],
)
